<resources>
    <string name="app_name">BookingApp</string>
    <string name="booking_fragment_label">Забронировано</string>
    <string name="companies_fragment_label">Компании</string>
    <string name="places_fragment_label">Места</string>
    <string name="booking_date_fragment_label">Место</string>
    <string name="profile_fragment_label">Профиль</string>
    <string name="menu_profile_title">Профиль</string>
    <string name="menu_search_title">Поиск</string>
    <string name="booking_details_fragment_title">Вы забронировали:</string>
    <string name="cancel_booking">Отменить встречу</string>
    <string name="confirm_booking_return">Отменить</string>
    <string name="confirm_booking_confirm">Подтвердить</string>
    <string name="company">Компания:</string>
    <string name="place">Место:</string>
    <string name="data_and_time">Дата и время</string>
    <string name="register_btn_text">Зарегистрироваться</string>
    <string name="sign_in_btn_text">Войти</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="auth_app_logo">Auth app logo</string>
    <string name="user_name">Фио</string>
    <string name="email_hint">Электронная почта</string>
    <string name="confirm_password_hint">Подтвердите пароль</string>
    <string name="sign_in_hint">Уже есть аккаунт? Войти</string>
    <string name="loading_bar_text">Загрузка…</string>
    <string name="guest_sign_in_text">Войти как гость</string>
    <string name="required_edit_text">Незаполненное поле ввода</string>
    <string name="invalid_email">Неверный формат почты</string>
    <string name="password_invalid_len">Пароль должен состоять минимум из 8 символов</string>
    <string name="password_invalid_upper_letters">Пароль должен содержать минимум 1 заглавную букву</string>
    <string name="password_invalid_lower_letters">Пароль должен содержать минимум 1 строчную букву</string>
    <string name="password_invalid_numbers">Пароль должен содержать минимум 1 цифру</string>
    <string name="invalid_input_form_title">Ошибка ввода</string>
    <string name="accept_invalid_form_btn">Ок</string>
    <string name="empty_input_text">"Поле обязательно для заполнения"</string>
    <string name="confirmed_password_does_not_match">Подтверждённый пароль не совпадает</string>
    <string name="email_does_not_exist">Пользователя с этой почтой не существует</string>
    <string name="incorrect_credentials">Введен неверный логин или пароль</string>
    <string name="weak_password">Пароль недостаточно надежный</string>
    <string name="email_already_exists">Эта почта уже используется</string>
    <string name="booking_name">Тема встречи:</string>
    <string name="select">Выбрать</string>
    <string name="evening">Вечер</string>
    <string name="day">День</string>
    <string name="morning">Утро</string>
    <string name="user_name_hint">Фио</string>
    <string name="logout_btn_text">Выйти</string>
    <string name="guest_user_name">Гость</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_tab_text" />
    <string name="insert_booking_name_here">Тема встречи</string>
    <string name="period_required">Нужно выбрать время</string>
    <string name="empty_bookings_mock">На данный момент у вас нет забронированных мест</string>
</resources>