<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.example.bookingapp.app.fragments.authorization.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorPrimary"
        tools:context=".app.fragments.authorization.RegisterFragment">

        <TextView
            android:layout_marginTop="60dp"
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="?textAppearanceHeadline4"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            app:helperText="@string/required_edit_text"
            app:helperTextTextColor="?colorSecondary"
            android:layout_marginTop="60dp"
            android:layout_marginHorizontal="?screenPaddingHorizontal"
            android:id="@+id/edit_user_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:maxLength="16"
                android:lines="1"
                android:text="@={viewModel.username}"
                android:inputType="textPersonName"
                android:hint="@string/user_name"
                android:id="@+id/edit_user_name"
                android:autofillHints="name"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:helperText="@string/required_edit_text"
            app:helperTextTextColor="?colorSecondary"
            android:id="@+id/edit_email_layout"
            android:layout_marginHorizontal="?screenPaddingHorizontal"
            android:layout_marginTop="?verticalSpacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_user_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:lines="1"
                android:text="@={viewModel.email}"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:id="@+id/edit_email"
                android:autofillHints="emailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_password_layout"
            android:layout_marginTop="?verticalSpacing"
            android:layout_marginHorizontal="?screenPaddingHorizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:counterTextColor="?colorSecondary"
            app:passwordToggleEnabled="true"
            app:helperText="@string/required_edit_text"
            app:helperTextTextColor="?colorSecondary"
            app:layout_constraintTop_toBottomOf="@+id/edit_email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:lines="1"
                android:id="@+id/edit_password"
                android:maxLength="16"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:text="@={viewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:counterTextColor="?colorSecondary"
            app:helperText="@string/required_edit_text"
            app:helperTextTextColor="?colorSecondary"
            android:id="@+id/edit_confirm_password_layout"
            android:layout_marginTop="?verticalSpacing"
            android:layout_marginHorizontal="?screenPaddingHorizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:maxLength="16"
                android:lines="1"
                android:text="@={viewModel.confirmedPassword}"
                android:inputType="textPassword"
                android:hint="@string/confirm_password_hint"
                android:id="@+id/edit_confirm_password"
                android:autofillHints="password"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register_btn"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="?screenPaddingVertical"
            android:layout_marginHorizontal="?screenPaddingHorizontal"
            style="@style/ButtonStyle"
            android:text="@string/register_btn_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_confirm_password_layout" />

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="?screenPaddingVertical"
            android:layout_marginHorizontal="?screenPaddingHorizontal"
            style="@style/LoginButtonStyle"
            android:text="@string/sign_in_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>