<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.fragments.profile.ProfileFragment">

    <LinearLayout
        android:id="@+id/upper_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        android:orientation="vertical"
        android:paddingVertical="?verticalSpacing"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="?horizontalSpacing"
            android:src="@drawable/ic_profile_24"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/layout_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="?verticalSpacing"
            android:text="@string/guest_user_name"
            android:textAppearance="?textAppearanceHeadline6"
            android:textColor="@color/white" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_user_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="?screenPaddingHorizontal"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upper_layout"
        app:startIconDrawable="@drawable/ic_profile_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:hint="@string/user_name_hint"
            android:text="@string/guest_user_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="?screenPaddingHorizontal"
        android:layout_marginTop="?verticalSpacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_user_name_layout"
        app:startIconDrawable="@drawable/ic_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:hint="@string/email_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="?screenPaddingHorizontal"
        android:layout_marginBottom="?screenPaddingVertical"
        android:text="@string/logout_btn_text"
        app:icon="@drawable/ic_logout_24"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>